fixed "cook" not being uppercase

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <div class="search">
-      <h1>What do you want to cook ?</h1>
+      <h1>What do you want to COOK ?</h1>
       <input placeholder="Arrabiata penne..." />
       <br />
       <a href="pasta.html">Search</a>
